--- a/GenreService/pom.xml
+++ b/GenreService/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>dev.lokeshbisht</groupId>
 	<artifactId>GenreService</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>GenreService</name>
 	<description>Microservice for movie genre.</description>
 	<properties>
